--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div class="tilebox">
                 <div>
                     <div class="tile">
-                        <a href="template.html">
+                        <a href="dojoer/jblanchet/index.html">
                         JBB the Scrappy
                         </a>
                     </div>
