--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
             <div class="tilebox">
                 <div>
                     <div class="tile">
-                        <a href="dojoer/jblanchet/index.html">
+                        <a href="dojoer/dartmouth/2015/jblanchet/index.html">
                         JBB the Scrappy
                         </a>
                     </div>
                     <div class="tile">
-                        <a href="template.html">
+                        <a href="dojoer/dartmouth/2016/andrewm/index.html">
                         Andrew the Brave
                         </a>
                     </div>
