sickified top nav bar!

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <!-- CDN Scripts -->
 <!--        <script src="https://cdnjs.cloudflare.com/ajax/libs/less.js/2.2.0/less.min.js"></script>-->
         <script src="/mojosite/components/photo_array/body-background.js"></script>
+        <link rel="stylesheet" href="components/styles/hover.css">
     </head>
     <body>
       
@@ -47,37 +48,37 @@
             <div class="tilebox">
                 <div>
                     <div class="tile">
-                        <a href="dojoer/dartmouth/2015/jblanchet/index.html">
+                        <a class="hvr-buzz" href="dojoer/dartmouth/2015/jblanchet/index.html">
                         JBB the Scrappy
                         </a>
                     </div>
                     <div class="tile">
-                        <a href="dojoer/dartmouth/2016/andrewm/index.html">
+                        <a class="hvr-pulse-shrink" href="dojoer/dartmouth/2016/andrewm/index.html">
                         Andrew the Brave
                         </a>
                     </div>
                     <div class="tile">
-                        <a href="template.html">
+                        <a class="hvr-rotate" href="template.html">
                         Kevin the Kurious
                         </a>
                     </div>
                     <div class="tile">
-                        <a href="template.html">
+                        <a class="hvr-shutter-in-vertical" href="template.html">
                         Luisa the Crustaceous
                         </a>
                     </div>
                     <div class="tile">
-                        <a href="template.html">
+                        <a class="hvr-border-fade" href="template.html">
                         Mickey the McJaguar
                         </a>
                     </div>
                     <div class="tile">
-                        <a href="template.html">
+                        <a class="hvr-grow" href="template.html">
                         Etai the Ibis
                         </a>
                     </div>
                     <div class="tile">
-                        <a href="template.html">
+                        <a class="hvr-shadow-radial" href="template.html">
                         Tommy the Tomboy
                         </a>
                     </div>
