some changes to something

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         </a>
                     </div>
                     <div class="tile">
-                        <a class="hvr-shadow-radial" href="template.html">
+                        <a class="hvr-underline-reveal" href="template.html">
                         Tommy the Tomboy
                         </a>
                     </div>
