--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         </a>
                     </div>
                     <div class="tile">
-                        <a href="template.html">
+                        <a href="dojoer/dartmouth/2017/mjalperin/index.html">
                         Mickey the McJaguar
                         </a>
                     </div>
