--- a/index.html
+++ b/index.html
@@ -72,6 +72,12 @@
                         </a>
                     </div>
                     <div class="tile">
+                       <div class="background dartmouth"></div>
+                        <a class="hvr-pulse-shrink" href="dojoer/dartmouth/2018/lvasquez/index.html">
+                        Luisa 
+                        </a>
+                    </div>
+                    <div class="tile">
                     	<div class="background windsor"></div>
                     	<a href="https://jsfiddle.net/C0D3R_N1NJ4/vo52xekm/embedded/result/" class="hvr-buzz">
                     	Andrew the AlligaTHOR
