--- a/index.html
+++ b/index.html
@@ -88,6 +88,11 @@
                         Tommy the Tomboy
                         </a>
                     </div>
+                    <div class="tile">
+                        <a class="hvr-underline-reveal" href="dojoer/windsor/2018/bdiggs/index.html">
+                        Brianna the Beloved
+                        </a>
+                    </div>
                 </div>
             </div>
         </section>
