--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
                     	<a href="https://jsfiddle.net/5zL17vsf/1/embedded/result/" class="hvr-pulse">Erin the Ember Elephant</a>
                     </div>
                     <div class="tile">
+                        <div class="background windsor"></div>
                         <a class="hvr-underline-reveal" href="dojoer/windsor/2018/bdiggs/index.html">
                         Brianna the Beloved
                         </a>
